# SoftwareManagementCourse2019

cmake/handson/1_basics/exercise/dotprod/: CMakeLists.txt
cmake/handson/1_basics/exercise/dotprod/src/: CMakeLists.txt
cmake/handson/1_basics/exercise/dotprodcl/: CMakeLists.txt
cmake/handson/1_basics/exercise/dotprodcl/src/: CMakeLists.txt
cmake/handson/3_installing_libs/exercise/dotprod/tests/: CMakeLists.txt
